avoid overflow

--- a/src/styles/smaller.css
+++ b/src/styles/smaller.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 1000px) {
   .container {
     width: calc(100%);
+    overflow: hidden;
   }
   .start {
     transform: none;
@@ -36,6 +37,9 @@
   }
   section {
     padding: 25px;
+  }
+  header ul li {
+    min-width: none;
   }
 }
 
